--- a/bellonap2/src/app/components/acerca-de/acerca-de.component.html
+++ b/bellonap2/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/perfil.png" class="img-fluid">
+        <img src="../../../assets/perfil.png" 
+        class="img-fluid">
     </div>
 
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
