--- a/bellonap2/src/app/components/acerca-de/acerca-de.component.html
+++ b/bellonap2/src/app/components/acerca-de/acerca-de.component.html
@@ -1,11 +1,10 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/perfil.png" 
-        class="img-fluid">
+        <img src="../../../assets/perfil.png" class="img-fluid" id="fotodeperfil">
     </div>
 
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p>Bellón Nerina</p>
+        <p id="nombre">Bellón Nerina</p>
         <p>Full Stack Developer Jr</p>
     </div>
 
