app.module.ts/app-routing.module.ts

--- a/bellonap2/src/app/app.component.html
+++ b/bellonap2/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<router-outlet></router-outlet>
+<app-hys></app-hys>
+
