--- a/bellonap2/src/app/components/hys/hys.component.html
+++ b/bellonap2/src/app/components/hys/hys.component.html
@@ -1,1 +1,17 @@
-<p>hys works!</p>
+<div class="row">
+        <circle-progress
+            [percent]="85"
+            [radius]="100"
+            [showUnits]="false" 
+            [title]="'HTML'"
+            [titleColor]="'pink'" 
+            [titleFontSize]="'3em'"
+            [showSubtitle]="false"        
+            [outerStrokeWidth]="16"
+            [innerStrokeWidth]="8"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="600"
+    ></circle-progress>
+</div>
