--- a/bellonap2/src/app/components/hys/hys.component.html
+++ b/bellonap2/src/app/components/hys/hys.component.html
@@ -1,11 +1,14 @@
 <div class="row">
+    <h1>Hard & Soft skills</h1>
+    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
         <circle-progress
-            [percent]="85"
+            [percent]="70"
             [radius]="100"
-            [showUnits]="false" 
-            [title]="'HTML'"
-            [titleColor]="'pink'" 
-            [titleFontSize]="'3em'"
+            [imageSrc]="'../assets/html.png'"
+            [showImage]="true"
+            [imageHeight]="70"
+            [imageWidth]="70"
+            [showUnits]="false"                    
             [showSubtitle]="false"        
             [outerStrokeWidth]="16"
             [innerStrokeWidth]="8"
@@ -13,5 +16,96 @@
             [innerStrokeColor]="'#C7E596'"
             [animation]="true"
             [animationDuration]="600"
-    ></circle-progress>
+        ></circle-progress>
+    </div>
+    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
+        <circle-progress
+            [percent]="75"
+            [radius]="100"
+            [imageSrc]="'../assets/css.png'"
+            [showImage]="true"
+            [imageHeight]="70"
+            [imageWidth]="70"
+            [showUnits]="false"                    
+            [showSubtitle]="false"        
+            [outerStrokeWidth]="16"
+            [innerStrokeWidth]="8"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="600"
+        ></circle-progress>
+    </div>
+    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
+        <circle-progress
+            [percent]="65"
+            [radius]="100"
+            [imageSrc]="'../assets/js.png'"
+            [showImage]="true"
+            [imageHeight]="70"
+            [imageWidth]="70"
+            [showUnits]="false"                    
+            [showSubtitle]="false"        
+            [outerStrokeWidth]="16"
+            [innerStrokeWidth]="8"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="600"
+        ></circle-progress>
+    </div>
+    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
+        <circle-progress
+            [percent]="60"
+            [radius]="100"
+            [imageSrc]="'../assets/github.png'"
+            [showImage]="true"
+            [imageHeight]="70"
+            [imageWidth]="70"
+            [showUnits]="false"                    
+            [showSubtitle]="false"        
+            [outerStrokeWidth]="16"
+            [innerStrokeWidth]="8"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="600"
+        ></circle-progress>
+    </div>
+    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
+        <circle-progress
+            [percent]="100"
+            [radius]="100"
+            [imageSrc]="'../assets/grupal.png'"
+            [showImage]="true"
+            [imageHeight]="70"
+            [imageWidth]="70"
+            [showUnits]="false"                    
+            [showSubtitle]="false"        
+            [outerStrokeWidth]="16"
+            [innerStrokeWidth]="8"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="600"
+        ></circle-progress>
+    </div>
+    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
+        <circle-progress
+            [percent]="90"
+            [radius]="100"
+            [imageSrc]="'../assets/eng.png'"
+            [showImage]="true"
+            [imageHeight]="70"
+            [imageWidth]="70"
+            [showUnits]="false"                    
+            [showSubtitle]="false"        
+            [outerStrokeWidth]="16"
+            [innerStrokeWidth]="8"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="600"
+        ></circle-progress>
+    </div>
 </div>
