--- a/bellonap2/src/app/app.component.html
+++ b/bellonap2/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-educacion></app-educacion>
 <router-outlet></router-outlet>
 <app-hys></app-hys>
-
+<app-proyecto></app-proyecto>
+<app-footer></app-footer>
