--- a/bellonap2/FrontEnd/src/app/components/login/login.component.css
+++ b/bellonap2/FrontEnd/src/app/components/login/login.component.css
@@ -1,15 +1,10 @@
-.divider:after,
-.divider:before {
-content: "";
-flex: 1;
-height: 1px;
-background: #eee;
-}
-.h-custom {
-height: calc(100% - 73px);
-}
-@media (max-width: 450px) {
-.h-custom {
-height: 100%;
-}
-}
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #a1b5cb;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgb(141, 190, 231), #a1b5cb);
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, #a1b5cb, rgb(32, 70, 136))
+    }
