--- a/bellonap2/FrontEnd/src/app/components/login/login.component.html
+++ b/bellonap2/FrontEnd/src/app/components/login/login.component.html
@@ -1,4 +1,3 @@
-
 <section class="vh-100 gradient-custom">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -8,10 +7,11 @@
 
             <div class="mb-md-5 mt-md-4 pb-5">
 
-              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Ingrese usuario y contraseña</p>
+              <h2 class="fw-bold mb-2 text-uppercase">BIENVENIDO</h2>
+              <p class="text-white-50 mb-5">Ingrese su usuario y contraseña</p>
               
               <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+              
                 <div class="form-outline form-white mb-4">
                   <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" 
                   [(ngModel)]="nombreUsuario"required />
@@ -26,14 +26,15 @@
   
                 <!--<p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">¿Olvido su contraseña?</a></p>-->
   
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-
-                <!--<div>
-                  <p class="mb-0">Crear una cuenta <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
-                  </p>
-                </div>-->
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar sesión</button>
 
               </form>
+
+            <div>
+               <p class="mb-0">¿No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Regístrate</a>
+               </p>
+            </div>
+
 
               <div *ngIf="f.submitted && isLogginFail" class="alert alert-danger mt-3">Fail en el login:
                 {{errMsj}}
