--- a/bellonap2/FrontEnd/src/app/components/experiencia/experiencia.component.html
+++ b/bellonap2/FrontEnd/src/app/components/experiencia/experiencia.component.html
@@ -1,25 +1,31 @@
 <div class="row">
     <h1>Experiencia laboral</h1>
-    <div class="col-lg-12">
-    <ul>
-        <li>
-            <h1>2008 - Actualmente:</h1>
-            <p>Servicio de Radiología de Centro Médico San Martín. Esperanza, Santa Fe</p>
-        </li>
-    </ul>
-    <ul>
-        <li>
-            <h1>2010 </h1> <h3>(6 meses de duración)</h3>
-            <p>Pasantías en Resonancia Magnética Nuclear y Tomografía Axial Computada
-                en Sanatorio de Seguridad Social Rosendo García. Rosario, Santa Fe.</p>
-        </li>
-    </ul>    
-    <ul>
-        <li>
-            <h1>2012 - Actualmente:</h1>
-            <p>Servicio de Resonancia Magnética Nuclear de IDESA. Esperanza, Santa Fe.</p>
-        </li>
-    </ul>
-
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+            Nueva Experiencia
+        </button>
     </div>
+
+    <div class="col lg 1"></div>
+    <div class="col-lg-11">
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Experiencia of expe">
+                    <td>
+                        <h2>{{Experiencia.nombreE}}</h2>
+                    </td>
+                    <td>{{Experiencia.descripcionE}}</td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                    </td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
