--- a/bellonap2/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/bellonap2/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -1,39 +1,31 @@
 <div class="row">
-    <h1>Educación y Capacitación</h1>
-    <div class="col-lg-12">
-    <ul>
-        <li>
-            <h1>1995 – 1999</h1>
-            <p>Educación secundaria completa con el título de “Perito Mercantil con Especialización Contable e Impositiva”
-            en Escuela Normal Superior D. F. Sarmiento. Esperanza, Santa Fe.
-            </p>
-        </li>
-    </ul>
-    <ul>
-        <li>
-            <h1>2000 – 2001 </h1>
-            <p>Carrera de Medicina incompleta
-            en Facultad de Ciencias Médicas – Universidad Nacional de Rosario. Rosario, Santa Fe.</p>
-        </li>
-    </ul>    
-    <ul>
-        <li>
-            <h1>2002 – 2005</h1>
-            <p>Carrera de Técnico Superior en Radiología Industrial con el título de “Técnico Superior en Radiología Industrial”
-            en Instituto Superior Autorizado Nº 4080 de Tecnología Médica. Rosario, Santa Fe.</p>
-        </li>
-    </ul>
-    <ul>
-        <li>
-            <h1>2002 – 2006</h1>
-            <p>Carrera de Técnico Superior en Radiología Veterinaria con el título de “Técnico Superior en Radiología Veterinaria”
-            en Instituto Superior Autorizado Nº 4080 de Tecnología Médica. Rosario, Santa Fe.</p>
-        </li>
-    </ul>
-    <ul>
-        <li>
-            <h1>2002 – 2007</h1>
-            <p>Carrera de Técnico Superior en Diagnóstico por Imágenes y Terapia Radiante con el título de “Técnico Superior en Diagnóstico por Imágenes y Terapia Radiante", Matrícula Nº 480,
-            en Instituto Superior Autorizado Nº 4080 de Tecnología Médica. Rosario, Santa Fe.</p>
-        </li>
-    </ul>
+    <h1>Educación</h1>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
+            Agregar Educación
+        </button>
+    </div>
+
+    <div class="col lg 1"></div>
+    <div class="col-lg-11">
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Educacion of educacion">
+                    <td>
+                        <h2>{{Educacion.nombreE}}</h2>
+                    </td>
+                    <td>{{Educacion.descripcionE}}</td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                    </td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Educacion.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+</div>
