--- a/bellonap2/FrontEnd/src/app/components/hys/hys.component.html
+++ b/bellonap2/FrontEnd/src/app/components/hys/hys.component.html
@@ -1,111 +1,38 @@
 <div class="row">
     <h1>Hard & Soft skills</h1>
-    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
-        <circle-progress
-            [percent]="70"
-            [radius]="100"
-            [imageSrc]="'../assets/html.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [showUnits]="false"                    
-            [showSubtitle]="false"        
-            [outerStrokeWidth]="16"
-            [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#78C000'"
-            [innerStrokeColor]="'#C7E596'"
-            [animation]="true"
-            [animationDuration]="600"
-        ></circle-progress>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevahys" *ngIf="isLogged">
+            Agregar Hard & Soft skills
+        </button>
     </div>
-    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
+
+    <div class="text-center col-sm-4 col-md-4 col-lg-4" *ngFor="let Skill of hys">
         <circle-progress
-            [percent]="75"
-            [radius]="100"
-            [imageSrc]="'../assets/css.png'"
+            [percent]="Skill.progreso"
+            [radius]="75"
+            [imageSrc]="Skill.img"
             [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [showUnits]="false"                    
-            [showSubtitle]="false"        
-            [outerStrokeWidth]="16"
+            [imageHeight]="60"
+            [imageWidth]="60"
+            [showUnits]="false"
+            [showSubtitle]="false"
+            [outerStrokeWidth]="12"
             [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#78C000'"
-            [innerStrokeColor]="'#C7E596'"
+            [outerStrokeColor]="'rgb(106, 72, 138)'"
+            [innerStrokeColor]="'rgb(38, 23, 53)'"
             [animation]="true"
-            [animationDuration]="600"
+            [animationDuration]="800"
+            [lazy]="true"     
         ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
-        <circle-progress
-            [percent]="65"
-            [radius]="100"
-            [imageSrc]="'../assets/js.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [showUnits]="false"                    
-            [showSubtitle]="false"        
-            [outerStrokeWidth]="16"
-            [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#78C000'"
-            [innerStrokeColor]="'#C7E596'"
-            [animation]="true"
-            [animationDuration]="600"
-        ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
-        <circle-progress
-            [percent]="60"
-            [radius]="100"
-            [imageSrc]="'../assets/github.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [showUnits]="false"                    
-            [showSubtitle]="false"        
-            [outerStrokeWidth]="16"
-            [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#78C000'"
-            [innerStrokeColor]="'#C7E596'"
-            [animation]="true"
-            [animationDuration]="600"
-        ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
-        <circle-progress
-            [percent]="100"
-            [radius]="100"
-            [imageSrc]="'../assets/grupal.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [showUnits]="false"                    
-            [showSubtitle]="false"        
-            [outerStrokeWidth]="16"
-            [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#78C000'"
-            [innerStrokeColor]="'#C7E596'"
-            [animation]="true"
-            [animationDuration]="600"
-        ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 con-md-4 col-lg-4">   
-        <circle-progress
-            [percent]="90"
-            [radius]="100"
-            [imageSrc]="'../assets/eng.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [showUnits]="false"                    
-            [showSubtitle]="false"        
-            [outerStrokeWidth]="16"
-            [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#78C000'"
-            [innerStrokeColor]="'#C7E596'"
-            [animation]="true"
-            [animationDuration]="600"
-        ></circle-progress>
-    </div>
-</div>
+
+        <div class="col lg 1"></div>
+        <div class="col-lg-11">
+            <td *ngIf="isLogged">
+                 <button class="btn btn-light" routerLink="/edithys/{{Skill.id}}">
+                     <i class="bi bi-pencil-fill"></i> EDITAR</button>
+            </td>
+            <td *ngIf="isLogged">
+                <button class="btn btn-danger" (click)="delete(Skill.id)">
+                    <i class="bi bi-trash-fill"></i> BORRAR</button>
+            </td>
+         </div>
