--- a/bellonap2/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/bellonap2/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -5,11 +5,11 @@
         </div>
         <div class="redes">
             <div>
-                <a href=""><img src="../../../assets/linkedin.png" id="linkedin"></a>
-                <a href=""><img src="../../../assets/twitter.png" id="twitter"></a>
-                <a href=""><img src="../../../assets/facebook.png" id="facebook"></a>
-                <a href=""><img src="../../../assets/instagram.png" id="instagram"></a>
-                <a href=""><img src="../../../assets/github.png"id="github"></a>
+                <a href="https://www.linkedin.com/in/nerinabellon"><img src="../../../assets/linkedin.png" id="linkedin"></a>               
+                <a href="https://www.instagram.com/nerinabellon"><img src="../../../assets/instagram.png" id="instagram"></a>
+                <a href="https://www.facebook.com/nerinabellon"><img src="../../../assets/facebook.png" id="facebook"></a>                
+                <a href="https://www.twitter.com/nerinabellon"><img src="../../../assets/twitter.png" id="twitter"></a>
+                <a href="https://www.github.com/pernoris"><img src="../../../assets/github.png"id="github"></a>
             <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESO</button>
             <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESIÓN</button>
             </div>
