--- a/bellonap2/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/bellonap2/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -10,8 +10,9 @@
 
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
             <span>
-                <h1>Acerca de mí</h1>
-                <p>Técnica Superior en Diagnóstico por Imágenes</p>
+                <h1>¡Bienvenidos!</h1>
+                <p>Soy Nerina, de Esperanza (Santa Fe)
+                y este es mi Portfolio, desarrollado para Argentina Programa.</p>                
             </span>
     </div>
 </div>
