--- a/bellonap2/FrontEnd/src/app/components/educacion/editeducacion.component.html
+++ b/bellonap2/FrontEnd/src/app/components/educacion/editeducacion.component.html
@@ -3,11 +3,11 @@
         <div>
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre de la Institución</label>
+                    <label for="nombreE">Descripción de sus estudios</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="educacion.nombreE" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripción de sus estudios</label>
+                    <label for="descripcionE">Nombre de la Institución</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="educacion.descripcionE" required>
                 </div>
                 <button class="btn btn-primary">
