--- a/bellonap2/FrontEnd/src/app/components/experiencia/new-experiencia.component.html
+++ b/bellonap2/FrontEnd/src/app/components/experiencia/new-experiencia.component.html
@@ -3,11 +3,11 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre de la empresa</label>
+                    <label for="nombreE">Descripción de la tarea</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripción de la tarea</label>
+                    <label for="descripcionE">Nombre de la empresa</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
                 <button class="btn btn-primary">
