--- a/bellonap2/FrontEnd/src/app/components/proyecto/new-proyecto.component.html
+++ b/bellonap2/FrontEnd/src/app/components/proyecto/new-proyecto.component.html
@@ -7,7 +7,7 @@
                     <input type="text" class="form-control" id="nombreP" name="nombreP"[(ngModel)]="nombreP" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionP">Descripcion proyecto</label>
+                    <label for="descripcionP">Descripción proyecto</label>
                     <input type="text" class="form-control" id="descripcionP" name="descripcionP" [(ngModel)]="descripcionP" required>
                 </div>
                 <div class="form-group">
