--- a/bellonap2/FrontEnd/src/app/components/proyecto/proyecto.component.css
+++ b/bellonap2/FrontEnd/src/app/components/proyecto/proyecto.component.css
@@ -5,8 +5,8 @@
 .contenedor{
     width: auto;
 }
-.parte1,.parte2{
-    display: inline-block;
+.parte1, .parte2, .parte3{
+    display:inline-block;
     text-align: justify;
 }
 .img-proyecto{
