--- a/bellonap2/FrontEnd/src/app/components/proyecto/proyecto.component.html
+++ b/bellonap2/FrontEnd/src/app/components/proyecto/proyecto.component.html
@@ -1,12 +1,36 @@
 <div class="row">
-    <h1>Proyectos Realizados</h1>
-    <div class="contenedor">
-        <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h1>Argentina Programa</h1>
-            <p>#SéProgramar</p>
-            <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-                <img src="../../../assets/ape1.png" class="img-fluid img-proyecto">
-            </div>
-        </div>
+    <h1>Proyectos</h1>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevopro" *ngIf="isLogged">
+            Agregar Proyecto
+        </button>
     </div>
+
+        <div class="col-lg-11">
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Proyecto of proyecto">
+                    <td class="col-sm-11 col-md-7 col-lg-3 parte1">
+                        <h2>{{Proyecto.nombreP}}</h2>
+                    </td>
+                    <td class="col-sm-11 col-md-7 col-lg-4 parte2">
+                        <h4>{{Proyecto.descripcionP}}</h4>
+                    </td>
+                    <td class="col-sm-11 col-md-7 col-lg-4 parte3">
+                        <div ><img [src]="Proyecto.img" alt="img proyecto AP" class="img-fluid img-proyecto" id="imgProyecto"></div>
+                    </td>
+
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-light" routerLink="/editpro/{{Proyecto.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                    <td class="col-sm-11 col-md-7 col-lg-4 parte3">
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Proyecto.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
