--- a/bellonap2/FrontEnd/src/app/components/hys/hys.component.html
+++ b/bellonap2/FrontEnd/src/app/components/hys/hys.component.html
@@ -29,8 +29,8 @@
      
         <div class="col-sm-4 col-md-2 col-lg-4 align-items-start flex-column" *ngIf="isLogged">
                  <button class="btn btn-light" routerLink="/edithys/{{Skill.id}}">
-                     <i class="bi bi-pencil-fill"></i> EDITAR</button>           
+                     <i class="bi bi-pencil-fill"></i> </button>           
                 <button class="btn btn-danger" (click)="delete(Skill.id)">
-                    <i class="bi bi-trash-fill"></i> BORRAR</button>          
+                    <i class="bi bi-trash-fill"></i> </button>          
          </div>        
     </div>
