--- a/bellonap2/FrontEnd/src/app/components/proyecto/new-proyecto.component.html
+++ b/bellonap2/FrontEnd/src/app/components/proyecto/new-proyecto.component.html
@@ -3,11 +3,11 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreP">Nombre proyecto</label>
+                    <label for="nombreP">Descripción proyecto</label>
                     <input type="text" class="form-control" id="nombreP" name="nombreP"[(ngModel)]="nombreP" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionP">Descripción proyecto</label>
+                    <label for="descripcionP">Nombre proyecto</label>
                     <input type="text" class="form-control" id="descripcionP" name="descripcionP" [(ngModel)]="descripcionP" required>
                 </div>
                 <div class="form-group">
