--- a/bellonap2/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/bellonap2/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -6,7 +6,6 @@
         </button>
     </div>
 
-    <div class="col lg 1"></div>
     <div class="col-lg-11">
         <table class="table">
             <tbody>
@@ -17,11 +16,11 @@
                     <td>{{Educacion.descripcionE}}</td>
                     <td *ngIf="isLogged">
                         <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
-                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                            <i class="bi bi-pencil-fill"></i> </button>
                     </td>
                     <td *ngIf="isLogged">
                         <button class="btn btn-danger" (click)="delete(Educacion.id)">
-                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                            <i class="bi bi-trash-fill"></i> </button>
                     </td>
                 </tr>
             </tbody>
