--- a/bellonap2/FrontEnd/src/app/components/experiencia/experiencia.component.html
+++ b/bellonap2/FrontEnd/src/app/components/experiencia/experiencia.component.html
@@ -5,8 +5,7 @@
             Agregar Experiencia
         </button>
     </div>
-
-    <div class="col lg 1"></div>
+   
     <div class="col-lg-11">
         <table class="table">
             <tbody>
@@ -17,11 +16,11 @@
                     <td>{{Experiencia.descripcionE}}</td>
                     <td *ngIf="isLogged">
                         <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
-                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                            <i class="bi bi-pencil-fill"></i> </button>
                     </td>
                     <td *ngIf="isLogged">
                         <button class="btn btn-danger" (click)="delete(Experiencia.id)">
-                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                            <i class="bi bi-trash-fill"></i> </button>
                     </td>
                 </tr>
             </tbody>
